--- a/AdventOfCode2023/Components/Layout/NavMenu.razor
+++ b/AdventOfCode2023/Components/Layout/NavMenu.razor
@@ -25,17 +25,131 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-
-        @{
-            for(int i = 1; i < 25; i++)
-            {
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Day1">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day @i
-                    </NavLink>
-                </div>
-            }
-        }
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 1
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day2">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 2
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day3">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 3
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day4">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 4
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day5">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 5
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 6
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 7
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 8
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 9
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 10
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 11
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 12
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 13
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 14
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 15
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 16
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 17
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 18
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 19
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 20
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 21
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 22
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 23
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 24
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Day1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Day 25
+            </NavLink>
+        </div>
     </nav>
 </div>
 
